tests/cases/fail/vector_missing_import.u
-> main() {
  sti<->vector<-int32 example_vector.
  example_vector->push_back(1i).
  0i!
}
